tests/errors/prelude-string-reserved.ari
fn main() -> i64 {
  let text: String = "ari";
  return 0;
}
